# paradox

./: WEB.py  guild.json  main.py  pyproject.toml
templates/: commands.html  footer.html  guild.html  header.html  index.html  invalid.html  profile.html  verified.html  verify.html
