[tool.poetry]
name = "repl_python3_PoorIrritatingAbility"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.12.0"
dnspython = "^2.1.0"
textcaptcha = "^0.2.0"
randfacts = "^0.9.1"
py-cord = "^1.7.3"
anime-images-api = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
