[tool.poetry]
name = "repl_python3_PoorIrritatingAbility"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.12.0"
dnspython = "^2.1.0"
textcaptcha = "^0.2.0"
randfacts = "^0.9.1"
py-cord = "^1.7.3"
anime-images-api = "^0.0.6"
discord = "^1.7.3"
Flask = "^2.0.1"
waifu = "^0.0.2"
lavalink = "^3.1.4"
progress = "^1.6"
texttoimage = "^0.0.2"
yiffparty = "^0.06"
waifu-py = "^1.0.3"
Flask-Discord = "^0.1.64"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
